# darnit

./: ARCHITECTURE.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/: dependabot.yml  dot-project-spec-hash.txt
.github/workflows/: ci.yml  publish.yml  sbom.yml  upstream-spec-check.yml
.project/: darnit.yaml
.project/threatmodel/: mitigations.yaml
.specify/memory/: constitution.md
docs/: CNCF_METADATA.md  DARNIT_FRAMEWORK_DESIGN.md  DEPENDENCIES.md  HANDLER_AUTHORING.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  SAST-POLICY.md  SCA-POLICY.md  SECURITY_GUIDE.md  USAGE_GUIDE.md  declarative-configuration.md  plugin-discovery-design.md
docs/design/: CONTEXT_PROMPTS.md
docs/getting-started/: using-skills.md
docs/threatmodel/: SUMMARY.md  data-flow.md  raw-findings.json
docs/threatmodel/findings/: python-entry-mcp_tool_imperative.md  python-eop-dynamic_import_attr.md  python-info_disc-open_call.md  python-sink-dangerous_attr.md
openspec/changes/handler-when-clause/: design.md  proposal.md  tasks.md
openspec/changes/toml-schema-v2/: tasks.md
openspec/specs/ci-workflow-templates/: spec.md
openspec/specs/framework-design/: spec.md
openspec/specs/handler-pipeline/: spec.md
scripts/: create-example-test-repo.py  extract_templates.py  generate_docs.py  validate_sync.py
specs/003-auto-context-inference/: plan.md  research.md  spec.md  tasks.md
specs/003-auto-context-inference/checklists/: requirements.md
specs/008-skills-orchestration/: research.md  spec.md  tasks.md
specs/011-threat-model-restructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-threat-model-restructure/checklists/: requirements.md
tests/: test_lint.py  test_main.py
tests/darnit/: test_audit_next_steps.py  test_cli.py  test_skills_spec.py
tests/darnit/agent/: test_graph.py  test_state.py
tests/darnit_baseline/: test_attestation_storage.py  test_context_validation_dry_run.py  test_get_pending_context.py  test_handler_dispatch_integration.py  test_implementation.py  test_integration_e2e.py  test_remediation_smoke.py  test_tools_signatures.py
tests/darnit_example/: __init__.py  conftest.py  test_controls.py  test_implementation.py  test_remediation.py
tests/integration/: test_mcp_server.py
(+58 files in other folders)
